--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+  <color name="primaryColor">#1565c0</color>
+  <color name="primaryLightColor">#5e92f3</color>
+  <color name="primaryDarkColor">#003c8f</color>
+  <color name="secondaryColor">#ffeb3b</color>
+  <color name="secondaryLightColor">#ffff72</color>
+  <color name="secondaryDarkColor">#c8b900</color>
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
