--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:id="@+id/detail_workout__action_insert"
+        android:id="@+id/detail_workout_action_delete"
+        android:orderInCategory="100"
+        android:title="@string/home_settings_delete"
+        app:showAsAction="always"
+        android:visible="false"
+        android:icon="@drawable/ic_delete_24dp"/>
+
+    <item
+            android:id="@+id/detail_workout_action_done"
             android:orderInCategory="100"
-            android:title="@string/home_settings_add"/>
+            android:title="@string/home_settings_add"
+            app:showAsAction="always"
+            android:icon="@drawable/ic_check_24dp"/>
 </menu>
