--- a/app/src/main/res/layout/list_item_workout_exercise.xml
+++ b/app/src/main/res/layout/list_item_workout_exercise.xml
@@ -19,22 +19,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:onClick="@{() -> clickListener.onClick(workout)}">
+>
 
         <TextView
-                android:id="@+id/list_item_workout_exercise_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="@{workout.name}"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.6"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/list_item_workout_exercise_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{workout.name}"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/test"
+            android:onClick="@{(view) -> clickListener.onClick(view, workout)}"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/list_item_workout_ic_delete"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_workout_ic_delete"
+            app:layout_constraintTop_toTopOf="@+id/list_item_workout_ic_delete"
+            app:layout_constraintVertical_bias="0.2"
+            tools:text="@string/test" />
+
+        <ImageView
+            android:id="@+id/list_item_workout_ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/ic_delete_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="@{(view) -> clickListener.onClick(view, workout)}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
