--- a/app/src/main/res/layout/fragment_home_settings.xml
+++ b/app/src/main/res/layout/fragment_home_settings.xml
@@ -56,34 +56,24 @@
         </com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager.widget.ViewPager
-                android:id="@+id/home_settings_viewpager"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/home_settings_delete_btn"
-                app:layout_constraintStart_toStartOf="@+id/home_settings_tabLayout"
-                app:layout_constraintTop_toBottomOf="@+id/home_settings_delete_btn" />
+            android:id="@+id/home_settings_viewpager"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/home_settings_add_btn"
+            app:layout_constraintStart_toStartOf="@+id/home_settings_tabLayout"
+            app:layout_constraintTop_toBottomOf="@+id/home_settings_add_btn" />
 
         <Button
-                android:id="@+id/home_settings_add_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="@string/home_settings_add"
-                app:layout_constraintEnd_toStartOf="@+id/home_settings_delete_btn"
-                app:layout_constraintTop_toTopOf="@+id/home_settings_delete_btn"
-                android:onClick="@{() -> homeSettingsViewModel.onAddWorkoutClick()}"/>
-
-        <Button
-                android:id="@+id/home_settings_delete_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/home_settings_delete"
-                app:layout_constraintEnd_toEndOf="@+id/home_settings_tabLayout"
-                app:layout_constraintTop_toBottomOf="@+id/home_settings_tabLayout" />
+            android:id="@+id/home_settings_add_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:onClick="@{() -> homeSettingsViewModel.onAddWorkoutClick()}"
+            android:text="@string/home_settings_add"
+            app:layout_constraintEnd_toEndOf="@+id/home_settings_tabLayout"
+            app:layout_constraintTop_toBottomOf="@+id/home_settings_tabLayout" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
