--- a/app/src/main/res/layout/fragment_home_settings.xml
+++ b/app/src/main/res/layout/fragment_home_settings.xml
@@ -13,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
         <TextView
                 android:id="@+id/home_settings_title_txtView"
