--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/detail_workout_action_delete"
+        android:id="@+id/detail_action_delete"
         android:orderInCategory="100"
         android:title="@string/home_settings_delete"
         app:showAsAction="always"
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_delete_white_24dp"/>
 
     <item
-            android:id="@+id/detail_workout_action_done"
+            android:id="@+id/detail_action_done"
             android:orderInCategory="100"
             android:title="@string/home_settings_add"
             app:showAsAction="always"
