--- a/app/src/main/res/layout/fragment_home_settings.xml
+++ b/app/src/main/res/layout/fragment_home_settings.xml
@@ -39,22 +39,9 @@
                 app:layout_constraintStart_toStartOf="@+id/home_settings_title_txtView"
                 app:layout_constraintTop_toBottomOf="@+id/home_settings_title_txtView">
 
-
-            <com.google.android.material.tabs.TabItem
-                    android:id="@+id/home_settings_tabLayout_workout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/workout_title" />
-
-            <com.google.android.material.tabs.TabItem
-                    android:id="@+id/home_settings_tabLayout_exercice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/exercice_title" />
-
         </com.google.android.material.tabs.TabLayout>
 
-        <androidx.viewpager.widget.ViewPager
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/home_settings_viewpager"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -69,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:onClick="@{() -> homeSettingsViewModel.onAddWorkoutClick()}"
+            android:onClick="@{() -> homeSettingsViewModel.onAddClick()}"
             android:text="@string/home_settings_add"
             app:layout_constraintEnd_toEndOf="@+id/home_settings_tabLayout"
             app:layout_constraintTop_toBottomOf="@+id/home_settings_tabLayout" />
