--- a/app/src/main/res/navigation/navigation_settings.xml
+++ b/app/src/main/res/navigation/navigation_settings.xml
@@ -12,14 +12,10 @@
         tools:layout="@layout/fragment_home_settings">
         <action
             android:id="@+id/action_homeSettingsFragment_to_detailWorkoutSettingsFragment"
-            app:destination="@+id/detail_workout_settings_fragment"
-            app:popUpTo="@+id/detail_workout_settings_fragment"
-            app:popUpToInclusive="false" />
+            app:destination="@+id/detail_workout_settings_fragment" />
         <action
             android:id="@+id/action_home_settings_fragment_to_detailExerciseSettingsFragment"
-            app:destination="@id/detail_exercise_settings_fragment"
-            app:popUpTo="@+id/detail_exercise_settings_fragment"
-            app:popUpToInclusive="false" />
+            app:destination="@id/detail_exercise_settings_fragment" />
     </fragment>
 
     <fragment
@@ -28,9 +24,7 @@
         tools:layout="@layout/fragment_workout_settings">
         <action
             android:id="@+id/action_workout_settings_fragment_to_detail_workout_settings_fragment"
-            app:destination="@id/detail_workout_settings_fragment"
-            app:popUpTo="@+id/detail_workout_settings_fragment"
-            app:popUpToInclusive="false" />
+            app:destination="@id/detail_workout_settings_fragment" />
     </fragment>
 
     <fragment
@@ -44,9 +38,7 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_detail_workout_settings_fragment_to_home_settings_fragment"
-            app:destination="@id/home_settings_fragment"
-            app:popUpTo="@+id/home_settings_fragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/home_settings_fragment" />
     </fragment>
     <fragment
         android:id="@+id/exercise_settings_fragment"
@@ -55,8 +47,7 @@
         <action
             android:id="@+id/action_exercise_settings_fragment_to_detail_exercise_settings_fragment"
             app:destination="@id/detail_exercise_settings_fragment"
-            app:popUpTo="@+id/detail_exercise_settings_fragment"
-            app:popUpToInclusive="false" />
+         />
     </fragment>
     <fragment
         android:id="@+id/detail_exercise_settings_fragment"
@@ -68,9 +59,7 @@
             android:defaultValue="0" />
         <action
             android:id="@+id/action_detail_exercise_settings_fragment_to_home_settings_fragment"
-            app:destination="@id/home_settings_fragment"
-            app:popUpTo="@+id/home_settings_fragment"
-            app:popUpToInclusive="true" />
+            app:destination="@id/home_settings_fragment" />
     </fragment>
 
 </navigation>
