--- a/app/src/main/res/layout/fragment_home_settings.xml
+++ b/app/src/main/res/layout/fragment_home_settings.xml
@@ -15,41 +15,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/home_settings_title_txtView"
-                android:layout_width="0dp"
-                android:layout_height="29dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/home_settings_title"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
         <com.google.android.material.tabs.TabLayout
-                android:id="@+id/home_settings_tabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/home_settings_title_txtView"
-                app:layout_constraintTop_toBottomOf="@+id/home_settings_title_txtView">
+            android:id="@+id/home_settings_tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/home_settings_viewpager"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/home_settings_add_btn"
-            app:layout_constraintStart_toStartOf="@+id/home_settings_tabLayout"
-            app:layout_constraintTop_toBottomOf="@+id/home_settings_add_btn" />
 
         <Button
             android:id="@+id/home_settings_add_btn"
@@ -60,6 +37,17 @@
             android:text="@string/home_settings_add"
             app:layout_constraintEnd_toEndOf="@+id/home_settings_tabLayout"
             app:layout_constraintTop_toBottomOf="@+id/home_settings_tabLayout" />
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/home_settings_viewpager"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/home_settings_add_btn"
+            app:layout_constraintStart_toStartOf="@+id/home_settings_tabLayout"
+            app:layout_constraintTop_toBottomOf="@+id/home_settings_add_btn" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
