--- a/app/src/main/res/navigation/navigation_settings.xml
+++ b/app/src/main/res/navigation/navigation_settings.xml
@@ -39,6 +39,10 @@
         <action
             android:id="@+id/action_detail_workout_settings_fragment_to_home_settings_fragment"
             app:destination="@id/home_settings_fragment" />
+        <argument
+            android:name="status"
+            app:argType="boolean"
+            android:defaultValue="true" />
     </fragment>
     <fragment
         android:id="@+id/exercise_settings_fragment"
@@ -60,6 +64,10 @@
         <action
             android:id="@+id/action_detail_exercise_settings_fragment_to_home_settings_fragment"
             app:destination="@id/home_settings_fragment" />
+        <argument
+            android:name="status"
+            app:argType="boolean"
+            android:defaultValue="true" />
     </fragment>
 
 </navigation>
