--- a/app/src/main/res/layout/fragment_workout_settings.xml
+++ b/app/src/main/res/layout/fragment_workout_settings.xml
@@ -58,7 +58,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/workout_settings_chip_group" />
+            app:layout_constraintTop_toBottomOf="@+id/workout_settings_chip_group"
+            android:visibility="@{workoutSettingsViewModel.listVisibility}"/>
+
+        <TextView
+            android:id="@+id/workout_settings_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/workout_settings_no_data"
+            android:visibility="@{workoutSettingsViewModel.textVisibility}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
