--- a/app/src/main/res/layout/fragment_details_workout_setting.xml
+++ b/app/src/main/res/layout/fragment_details_workout_setting.xml
@@ -101,6 +101,18 @@
                 app:setSelectedData="@={detailWorkoutSettingsViewModel.workoutType}"
                 />
 
+        <Button
+            android:id="@+id/detail_workout_settings_btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:onClick="@{() -> detailWorkoutSettingsViewModel.onAddClick()}"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_spinner" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
