--- a/app/src/main/res/layout/list_item_add_exercise.xml
+++ b/app/src/main/res/layout/list_item_add_exercise.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="addExercise"
             type="com.mikolove.allmight.database.entities.AddExercise" />
@@ -43,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{Integer.toString(addExercise.series)}"
+            android:text="@{@string/list_wkaddex_series(addExercise.series)}"
             app:layout_constraintStart_toStartOf="@+id/list_item_ae_name"
             app:layout_constraintTop_toBottomOf="@+id/list_item_ae_name" />
 
@@ -52,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@{Integer.toString(addExercise.rep)}"
+            android:text="@{@string/list_wkaddex_rep(addExercise.rep)}"
             app:layout_constraintStart_toEndOf="@+id/list_item_ae_series"
             app:layout_constraintTop_toTopOf="@+id/list_item_ae_series" />
 
