In progress link workout exercise better version seems ok

--- a/app/src/main/res/navigation/navigation_settings.xml
+++ b/app/src/main/res/navigation/navigation_settings.xml
@@ -81,6 +81,9 @@
             android:name="workoutId"
             app:argType="integer"
             android:defaultValue="0" />
+        <action
+            android:id="@+id/action_workout_add_exercises_fragment_to_detail_workout_settings_fragment"
+            app:destination="@id/detail_workout_settings_fragment" />
     </fragment>
 
 </navigation>
