--- a/app/src/main/res/layout/fragment_details_workout_setting.xml
+++ b/app/src/main/res/layout/fragment_details_workout_setting.xml
@@ -105,13 +105,32 @@
             android:id="@+id/detail_workout_settings_btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:onClick="@{() -> detailWorkoutSettingsViewModel.onAddClick()}"
             android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_spinner"
             app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_spinner" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/detail_workout_settings_recycler_view_exercise"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/detail_workout_settings_spinner"
+            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_txt_exercise_title"
+            app:layout_constraintTop_toBottomOf="@+id/detail_workout_settings_btn_add" />
+
+        <TextView
+            android:id="@+id/detail_workout_settings_txt_exercise_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="@+id/detail_workout_settings_btn_add"
+            app:layout_constraintStart_toStartOf="@+id/detail_workout_settings_spinner"
+            app:layout_constraintTop_toTopOf="@+id/detail_workout_settings_btn_add" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
