--- a/app/src/main/res/layout/fragment_workout_add_exercises.xml
+++ b/app/src/main/res/layout/fragment_workout_add_exercises.xml
@@ -20,7 +20,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@{workoutAddExerciseViewModel.workout.name}"
+            android:textAppearance="?textAppearanceHeadline5"
+            android:text="@{@string/add_exercise_workout_title(workoutAddExerciseViewModel.workout.name)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +58,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/wkaddex_chip_selected" />
+                android:text="@{@string/wkaddex_chip_selected(workoutAddExerciseViewModel.selectedItem)}" />
 
         </com.google.android.material.chip.ChipGroup>
 
@@ -72,28 +73,32 @@
             app:layout_constraintStart_toEndOf="@+id/wkaddex_chip_group"
             app:layout_constraintTop_toBottomOf="@+id/wkaddex_title_info" />
 
-        <TextView
-            android:id="@+id/wkaddex_text_selected"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/primaryColor"
-            android:text="@string/wkaddex_info_selected"
-            android:gravity="center_vertical"
-            android:textColor="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="@+id/wkaddex_search_view"
-            app:layout_constraintStart_toStartOf="@+id/wkaddex_chip_group"
-            app:layout_constraintTop_toBottomOf="@+id/wkaddex_chip_group" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wkaddex_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/wkaddex_text_selected"
-            app:layout_constraintStart_toStartOf="@+id/wkaddex_text_selected"
-            app:layout_constraintTop_toBottomOf="@+id/wkaddex_text_selected" />
+            app:layout_constraintEnd_toEndOf="@+id/wkaddex_search_view"
+            app:layout_constraintStart_toStartOf="@+id/wkaddex_chip_group"
+            app:layout_constraintTop_toBottomOf="@+id/wkaddex_chip_group"
+            android:visibility="@{workoutAddExerciseViewModel.listVisibility}"/>
+
+        <TextView
+            android:id="@+id/wkaddex_txt_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="153dp"
+            android:layout_marginTop="299dp"
+            android:layout_marginEnd="165dp"
+            android:layout_marginBottom="350dp"
+            android:text="@string/detail_workout_settings_no_data"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/wkaddex_search_view"
+            app:layout_constraintStart_toStartOf="@+id/wkaddex_chip_group"
+            app:layout_constraintTop_toBottomOf="@+id/wkaddex_chip_group"
+            android:visibility="@{workoutAddExerciseViewModel.textVisibility}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
