--- a/app/src/main/res/layout/list_item_basic_info.xml
+++ b/app/src/main/res/layout/list_item_basic_info.xml
@@ -26,6 +26,7 @@
             android:layout_marginBottom="8dp"
             android:text="@{basicInfo.objectName}"
             android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
