--- a/app/src/main/res/navigation/navigation_settings.xml
+++ b/app/src/main/res/navigation/navigation_settings.xml
@@ -3,87 +3,87 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/navigation_settings"
-        app:startDestination="@id/home_settings_fragment">
+        app:startDestination="@id/settings_fragment">
 
     <fragment
-        android:id="@+id/home_settings_fragment"
-        android:name="com.mikolove.allmight.views.settings.home.HomeSettingsFragment"
+        android:id="@+id/settings_fragment"
+        android:name="com.mikolove.allmight.views.settings.SettingsFragment"
         android:label="Paramètres"
-        tools:layout="@layout/fragment_home_settings">
+        tools:layout="@layout/fragment_settings">
         <action
-            android:id="@+id/action_homeSettingsFragment_to_detailWorkoutSettingsFragment"
-            app:destination="@+id/detail_workout_settings_fragment" />
+            android:id="@+id/action_settings_fragment_to_settings_detail_workout_fragment"
+            app:destination="@+id/settings_detail_workout_fragment" />
         <action
-            android:id="@+id/action_home_settings_fragment_to_detailExerciseSettingsFragment"
-            app:destination="@id/detail_exercise_settings_fragment" />
+            android:id="@+id/action_settings_fragment_to_settings_detail_exercise_fragment"
+            app:destination="@id/settings_detail_exercise_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/workout_settings_fragment"
-        android:name="com.mikolove.allmight.views.settings.workout.WorkoutSettingsFragment"
-        tools:layout="@layout/fragment_workout_settings">
+        android:id="@+id/settings_workout_fragment"
+        android:name="com.mikolove.allmight.views.settings.workout.SettingsWorkoutFragment"
+        tools:layout="@layout/fragment_settings_workout">
         <action
-            android:id="@+id/action_workout_settings_fragment_to_detail_workout_settings_fragment"
-            app:destination="@id/detail_workout_settings_fragment" />
+            android:id="@+id/action_settings_workout_fragment_to_settings_detail_workout_fragment"
+            app:destination="@id/settings_detail_workout_fragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/detail_workout_settings_fragment"
-        android:name="com.mikolove.allmight.views.settings.detail.DetailWorkoutSettingsFragment"
+        android:id="@+id/settings_detail_workout_fragment"
+        android:name="com.mikolove.allmight.views.settings.detail.SettingsDetailWorkoutFragment"
         android:label="Paramètres"
-        tools:layout="@layout/fragment_details_workout_setting">
+        tools:layout="@layout/fragment_settings_details_workout">
         <argument
             android:name="workoutId"
             android:defaultValue="0"
             app:argType="integer" />
         <action
-            android:id="@+id/action_detail_workout_settings_fragment_to_home_settings_fragment"
-            app:destination="@id/home_settings_fragment" />
+            android:id="@+id/action_settings_detail_workout_fragment_to_settings_fragment"
+            app:destination="@id/settings_fragment" />
         <argument
             android:name="status"
             app:argType="boolean"
             android:defaultValue="true" />
         <action
-            android:id="@+id/action_detail_workout_settings_fragment_to_workout_add_exercises_fragment"
-            app:destination="@id/workout_add_exercises_fragment" />
+            android:id="@+id/action_settings_detail_workout_fragment_to_add_exercises_fragment"
+            app:destination="@id/add_exercises_fragment" />
     </fragment>
     <fragment
-        android:id="@+id/exercise_settings_fragment"
-        android:name="com.mikolove.allmight.views.settings.exercise.ExerciseSettingsFragment"
-        tools:layout="@layout/fragment_exercise_settings">
+        android:id="@+id/settings_exercise_fragment"
+        android:name="com.mikolove.allmight.views.settings.exercise.SettingsExerciseFragment"
+        tools:layout="@layout/fragment_settings_exercise">
         <action
-            android:id="@+id/action_exercise_settings_fragment_to_detail_exercise_settings_fragment"
-            app:destination="@id/detail_exercise_settings_fragment"
+            android:id="@+id/action_settings_exercise_fragment_to_settings_detail_exercise_fragment"
+            app:destination="@id/settings_detail_exercise_fragment"
          />
     </fragment>
     <fragment
-        android:id="@+id/detail_exercise_settings_fragment"
-        android:name="com.mikolove.allmight.views.settings.detail.DetailExerciseSettingsFragment"
-        tools:layout="@layout/fragment_details_exercise_setting">
+        android:id="@+id/settings_detail_exercise_fragment"
+        android:name="com.mikolove.allmight.views.settings.detail.SettingsDetailExerciseFragment"
+        tools:layout="@layout/fragment_settings_details_exercise">
         <argument
             android:name="exerciseId"
             app:argType="integer"
             android:defaultValue="0" />
         <action
-            android:id="@+id/action_detail_exercise_settings_fragment_to_home_settings_fragment"
-            app:destination="@id/home_settings_fragment" />
+            android:id="@+id/action_settings_detail_exercise_fragment_to_settings_fragment"
+            app:destination="@id/settings_fragment" />
         <argument
             android:name="status"
             app:argType="boolean"
             android:defaultValue="true" />
     </fragment>
     <fragment
-        android:id="@+id/workout_add_exercises_fragment"
-        android:name="com.mikolove.allmight.views.settings.workoutaddexercises.WorkoutAddExercisesFragment"
+        android:id="@+id/add_exercises_fragment"
+        android:name="com.mikolove.allmight.views.settings.addexercises.SettingsAddExercisesFragment"
         android:label="@string/manage"
-        tools:layout="@layout/fragment_workout_add_exercises">
+        tools:layout="@layout/fragment_settings_add_exercises">
         <argument
             android:name="workoutId"
             android:defaultValue="0"
             app:argType="integer" />
         <action
-            android:id="@+id/action_workout_add_exercises_fragment_to_detail_workout_settings_fragment"
-            app:destination="@id/detail_workout_settings_fragment" />
+            android:id="@+id/action_add_exercises_fragment_to_settings_detail_workout_fragment"
+            app:destination="@id/settings_detail_workout_fragment" />
     </fragment>
 
 </navigation>
