--- a/app/src/main/res/navigation/navigation_home.xml
+++ b/app/src/main/res/navigation/navigation_home.xml
@@ -9,6 +9,15 @@
         android:id="@+id/home_fragment"
         android:name="com.mikolove.allmight.views.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_fragment_to_chooseWorkoutFragment"
+            app:destination="@id/choose_workout_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/choose_workout_fragment"
+        android:name="com.mikolove.allmight.views.home.choose.ChooseWorkoutFragment"
+        android:label="ChooseWorkoutFragment"
+        tools:layout="@layout/fragment_choose_workout"/>
 
 </navigation>
